<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SelectTribesActivity">


    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:src="@drawable/ic_baseline_close_24"
        app:tint="@color/brown_main" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="10dp"
        android:text="@string/select_tribes"
        android:textColor="@color/brown_main"
        android:textSize="16.3sp" />

    <View
        android:id="@+id/div"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_grey" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/div"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/select_tribes_groups_that_you_wont_to_join_n_min_1_max_5"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@id/message">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tribesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                tools:itemCount="5"
                tools:listitem="@layout/tribes_list_item" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tribeFieldtl"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/enter_tribe"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tribeField"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="15dp"
                    android:drawablePadding="@dimen/_7sdp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_13sdp"
                    android:visibility="visible"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rlDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/btn_back">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:theme="@style/progressBarWhite"
                    android:visibility="gone" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>