<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#f8ffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.event.EventFragment">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="wrap_content"
        android:src="@drawable/layer_632"/>
<!--

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            &lt;!&ndash;
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_back" />&ndash;&gt;
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/event"
                android:textColor="@color/light_black"
                android:textSize="16.3sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_20sdp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="31dp">

                <RelativeLayout
                    android:id="@+id/addEventLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:paddingStart="10dp"
                        android:src="@drawable/profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/create_a_new_event"
                        android:textColor="#454545"
                        android:textSize="16.3sp" />

                    <ImageView
                        android:layout_width="19dp"
                        android:layout_height="19dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="50dp"
                        android:src="@drawable/additional" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_20sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/upcoming_round_bg"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:letterSpacing="0.03"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/upcoming"
                    android:textColor="#ffffff"
                    android:textSize="13.3sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/past_round_bg"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"

                    android:letterSpacing="0.03"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/past"
                    android:textColor="#454545"
                    android:textSize="13.3sp"
                    android:textStyle="normal" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/event_list_item_design" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>