<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:paddingVertical="@dimen/_5sdp"
                android:src="@drawable/profile_copy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@id/profileImage"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:letterSpacing="0.03"
                        android:text="Teja in "
                        android:textColor="#454545"
                        android:textSize="13.3sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/typeCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:letterSpacing="0.03"
                        android:layout_marginStart="5dp"
                        android:text="#Conscience"
                        android:textColor="#d56262"
                        android:textSize="13.3sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:letterSpacing="0.03"
                    android:text="Nov 5 2021, 3:12 PM"
                    android:textColor="#a1a1a1"
                    android:textSize="10sp"
                    android:textStyle="normal" />
            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:letterSpacing="0.03"
            android:maxLines="2"
            android:paddingHorizontal="15dp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/dummy_text"
            android:textColor="#454545"
            android:textSize="13.3sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="#2b000000" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/idSDimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:visibility="gone"
                android:adjustViewBounds="true"/>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/like_invite_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/likeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/like_1_copy"
                android:drawablePadding="@dimen/_3sdp"
                android:fontFamily="@font/montserrat_medium"
                android:letterSpacing="0.03"
                android:text=""
                android:textColor="#454545"
                android:textSize="11dp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:letterSpacing="0.03"
                    android:padding="@dimen/_2sdp"
                    android:text="Comments"
                    android:textColor="#454545"
                    android:textSize="10sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_2sdp"
                    android:background="@color/colorGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:letterSpacing="0.03"
                    android:padding="@dimen/_2sdp"
                    android:text="Share"
                    android:textColor="#454545"
                    android:textSize="10sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="#2b000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_5sdp">

            <CheckedTextView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/like_copy"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:letterSpacing="0.03"
                android:padding="@dimen/_10sdp"
                android:text="@string/likes"
                android:textColor="#454545"
                android:textSize="11sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableStart="@drawable/comment"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:letterSpacing="0.03"
                android:padding="@dimen/_10sdp"
                android:text="@string/comments"
                android:textColor="#454545"
                android:textSize="11sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:drawableStart="@drawable/share"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:letterSpacing="0.03"
                android:padding="@dimen/_10sdp"
                android:text="@string/share"
                android:textColor="#454545"
                android:textSize="11sp"
                android:textStyle="normal" />
        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>
